# libffi-wasm32

./: .gitignore  README.md  cabal.project  libffi-wasm32.cabal  shell.nix
.github/workflows/: develop.yml  shell.yml
app/: Main.hs
cbits/: ffi.c  ffi.h
cbits_test/: call.c  closure.c  test.sh
nix/: ci.nix  libffi.nix  project.nix  sources.json  src.nix  top.nix  wasi-sdk.nix
src/: LibFFI.hs
test/: Main.hs
