cabal-version: 2.4
name:          libffi-wasm32
version:       0.1.0.0

executable libffi-wasm32
  main-is:          Main.hs
  build-depends:
    , base        ^>=4.14.3.0
    , bytestring
    , language-c  >=0.9
    , pretty
    , process

  ghc-options:      -Wall
  hs-source-dirs:   app
  default-language: Haskell2010
