cabal-version: 2.4
name:          libffi-wasm32
version:       0.1.0.0

library libffi-wasm32-internal
  exposed-modules:  LibFFI
  build-depends:
    , base
    , bytestring
    , language-c  >=0.9
    , pretty

  ghc-options:      -Wall
  hs-source-dirs:   src
  default-language: Haskell2010

executable libffi-wasm32
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , libffi-wasm32-internal
    , unliftio

  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite libffi-wasm32-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , libffi-wasm32-internal
    , tasty

  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   test
  default-language: Haskell2010
